--- a/estilo2/style.css
+++ b/estilo2/style.css
@@ -77,7 +77,7 @@ article{
     background-color: white;
     padding: 10px;
     display: block;
-    width: 90%;
+    width: 100%;
     height: 100%;
     margin-left: auto;
     margin-right: auto;
@@ -96,6 +96,7 @@ picture > .imagem{
    display: block;
    margin-left: auto;
    margin-right: auto;
+   height: auto;
 }
 article > .imagem2{
     display: block;
@@ -143,7 +144,7 @@ aside >ul{
 
 /*CONFIGURAÇÕES RODAPÉ*/
 
-div >footer{
+footer{
     background-color: var(--color5);
     color: white;
     text-align: center;
