--- a/estilo2/style.css
+++ b/estilo2/style.css
@@ -25,7 +25,7 @@ body{
 }
 div{
     background-color: var(--color3);
-    margin: 0px;
+    margin: 0;
     
  
 }
@@ -79,7 +79,7 @@ article{
     background-color: white;
     padding: 10px;
     display: block;
-    width: 95%;
+    width: 90%;
     height: 100%;
     margin-left: auto;
     margin-right: auto;
@@ -131,8 +131,8 @@ aside{
     width: 97.5%;
     height: 100%;
     margin-top: 10px;
-    margin-left: 10px;
-    margin-right: -10px;
+    margin-left: auto;
+    margin-right: auto;
     background-color: var(--color1);
     color: black;
     border-radius: 10px;
